tests/fixtures/invalid/int_in_float.py
# Cannot use 'in' with Int and Float
x: bool = 1 in 1.0
